# Bondit

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json
app/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
app/src/components/: copy-contract.tsx  global-search.tsx  intro-modal.tsx  product-surface.tsx  shell-nav.tsx  wallet-controls.tsx  wallet-provider.tsx
app/src/lib/: api.ts  discovery-service.ts  discovery.ts  launch-transaction.ts  referral.ts  use-vanity-search.ts  vanity-worker.ts
cli/: README.md  package.json
cli/src/: index.ts  phantom-setup.ts
cli/src/commands/: create.ts  init.ts  (+4 more)
docs/: agent-authority-architecture.md
programs/agency-vaults/: Cargo.toml
programs/bonding-curve/: Cargo.toml
programs/bonding-curve/src/: lib.rs
programs/launch-factory/: Cargo.toml
programs/launch-factory/src/: lib.rs
programs/policy-engine/: Cargo.toml
programs/policy-engine/src/: lib.rs
programs/venue-adapters/: Cargo.toml
scripts/: grind-program-ids.sh
sdk/: package.json  tsconfig.json
sdk/src/: api.ts  constants.ts  index.ts  math.ts  pda.ts  types.ts
services/: docker-compose.yml
services/db/: init.sql
services/indexer/: .env.example  package.json  tsconfig.json
services/keeper/: .env.example  package.json
services/openclaw-ai/: .env.example  package.json  tsconfig.json
services/vanity-worker/: .env.example  Dockerfile  index.js  package.json  tsconfig.json
tests/: openclaw.ts  package.json
(+57 files in other folders)
