[package]
name = "policy-engine"
version = "0.1.0"
description = "BondIt.lol Policy Engine - Deterministic rules for stewardship"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
agency-vaults = { path = "../agency-vaults", features = ["cpi"] }
